trying to keep it rolling

--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -97,7 +97,9 @@ We now demonstrate the performance of our multi-GPU algorithms. In all cases the
 
 Chapter~\ref{chap:gpu_rbffd} introduced the Cascade cluster, which contains up to 32 NVidia M2070 GPUs, 8 NVidia K20 GPUs and 3 Intel Xeon Phis. Although Cascade is not a large GPU cluster like Titan or Keeneland, it suffices for prototyping and performing simple scaling tests an a variety of hardware. In the benchmarks that follow, we scale up 32 M2070 GPUs and measure the GFLOP/sec for the distributed SpMV with $N=4096000$ rows $n=17, 31, 50$ and $101$ nonzeros per row.  
 
-Table~\ref{tbl:cascade_m2070_nonoverlap} presents the GFLOP/sec achieved
+Table~\ref{tbl:cascade_m2070_nonoverlap} presents three groups of data for $p=1, 2, 4$ and $8$ compute nodes. In the first group each test case jobs with 1 processes per node (PPN), with each process. 
+
+For $n=101$ the single process, single node test could not be executed because the M2070 is limited to 6 GB global memory and the test case requires $(2*N*n)*8 \text{bytes}) = 6.6$ GB for the ELL matrix.
 
 \begin{table}[htb]
 \centering
@@ -106,7 +108,7 @@ Table~\ref{tbl:cascade_m2070_nonoverlap} presents the GFLOP/sec achieved
 \begin{tabular}{c|c|c|c|c|c|c}
  \multicolumn{2}{c}{ } & \multicolumn{4}{|c|}{Observed GFLOP/sec} \\  \hline
 Compute Nodes   &   PPN  &   n=17   &   n=31   &   n=50   &   n=101   \\ \hline
-1  &  1  &  8.4  &  8.4  &  8.9  &   \\
+1  &  1  &  8.4  &  8.4  &  8.9  & --  \\
 2  &  1  &  6.1  &  6.8  &  6.4  &  7.6 \\
 4  &  1  &  6.9  &  9.1  &  10.3  &  13.3 \\
 8  &  1  &  12.1  &  14.6  &  12.1  &  23.0 \\ \hline
