Changes to chapter 7

--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -21,15 +21,14 @@
 
 
 
-Here, we present the first results in the literature for parallelizing RBF-FDs on multi-CPU and multi-GPU architectures for solving PDEs. A less verbose version of this chapter was included in \cite{BolligFlyerErlebacher2012}. 
+Here, we present the first results in the literature related to the parallelization of the RBF-FDs methodology on multi-CPU and multi-GPU architectures with the goal of solving PDEs. %A less verbose version of this chapter was included in \cite{BolligFlyerErlebacher2012}. 
 
  To verify our multi-CPU, single GPU and multi-GPU implementations, two hyperbolic PDEs on the surface of the sphere are tested: 1) vortex roll-up \cite{NairTransport05, NairJablonowski08} and 2) solid body rotation \cite{JakobChien1995}. These tests were chosen since they are not only standard in the numerical literature, but also
 for the development of RBFs in solving PDEs on the sphere \cite{FlyerWright07, Fornberg2008, FlyerLehto10, Fornberg2011a}. Although any `approximately evenly' distributed nodes on the sphere would suffice for our purposes, maximum determinant (MD) node distributions on the sphere are used (see \cite{Sloan2003} for details) in order to be consistent with previously published results (see e.g., \cite{FlyerWright07} and \cite{FornbergLehto11}). Node sets from 1024 to 27,556 are considered with stencil sizes ranging from 17 to 101.
 
 All results in this section are produced by the single-GPU implementation. Multi-CPU and multi-GPU implementations are verified to produce these same results. Synchronization of the solution at each time-step and the use of double precision on both the CPU and GPU ensure consistent results regardless of the number and/or choice of CPU vs GPU. Eigenvalues are computed on the CPU by the Armadillo library \cite{armadillo2010}.
 
-
-We assume the spherical coordinate system is used in terms of latitude $\lambda$ and longitude $\theta$:
+We assume a spherical coordinate system described in terms of latitude $\lambda$ and longitude $\theta$:
 \begin{eqnarray*} 
 x & = & \rho \cos \lambda \cos \theta, 	\\
 y & = & \rho \sin \lambda \cos \theta, 		\\
@@ -87,8 +86,9 @@ where $D_{\Delta^{k}}$ is the differentiation matrix for the $k$-th power Laplac
 The scaling parameter $\gamma_c$ and the order of hyperviscosity $k$ are given in
 Table~\ref{tbl:vortex_hv_params}. The parameters are tuned for the MD node sets. Since the values of $\gamma_c$ and $k$ vary based on the eigenvalues/conditioning of $D_\lambda$, switching to an icosahedral or spherical CVT requires additional tuning. Changes to the stencil size or the function for $\epsilon$ also require tuning. 
 
-The parameters $\gamma_c$ and $k$ are obtained via trial-and-error parameter searching on $N=4096$ nodes. The goal when choosing parameters is to push all eigenvalues to the left half-plane, and then tweak $\gamma_c$ up or down to condense the eigenvalues as near to the imaginary axis as possible. We first choose $k$ to damp the higher spurious eigenmodes of $\text{diag}(\omega(\theta)) D_\lambda$ while leaving the lower physical modes that can be resolved by the stencil intact. This effectively pushes eigenvalues to the left half of the complex plane.  We then try to adjust $\gamma_c$ to get eigenvalues condensed as near to the imaginary axis as possible. As a rule of thumb we try to keep the range of filtered real parts within twice the width of the unfiltered range, so hyperviscosity does not cause excessive diffusion in the solution. Figure \ref{fig:vortex_eigs} shows the effect of hyperviscosity on the eigenvalues of the DM, $-diag(\omega(\theta)) D_\lambda$, from no hyperviscosity in Equation~\ref{eq:vortex_matrix_form} (Figure~\ref{fig:vortex_eigs_nohv}) to the hyperviscosity modified DM in Equation~\ref{eq:vortex_matrix_form_w_hv} (Figure~\ref{fig:vortex_eigs_hv}). 
-
+The parameters $\gamma_c$ and $k$ are obtained via trial-and-error parameter searching on $N=4096$ nodes. 
+%The goal when choosing parameters is to push all the eigenvalues to the left half-plane, and then tweak $\gamma_c$ up or down to condense the eigenvalues as near to the imaginary axis as possible. 
+We first choose $k$ to damp out the higher spurious eigenmodes of $\text{diag}(\omega(\theta)) D_\lambda$ while leaving intact the lower physical modes that can be resolved by the stencil. This effectively pushes eigenvalues to the left half of the complex plane.  We then try to adjust $\gamma_c$ to get eigenvalues condensed as near to the imaginary axis as possible. As a rule of thumb, we try to keep the range of filtered real parts within twice the width of the unfiltered range, so hyperviscosity does not cause excessive diffusion in the solution. Figure \ref{fig:vortex_eigs} shows the effect of hyperviscosity on the eigenvalues of the DM, $-diag(\omega(\theta)) D_\lambda$, from no hyperviscosity in Equation~\ref{eq:vortex_matrix_form} (Figure~\ref{fig:vortex_eigs_nohv}) to the hyperviscosity-modified DM in Equation~\ref{eq:vortex_matrix_form_w_hv} (Figure~\ref{fig:vortex_eigs_hv}). 
 
 The RBF shape parameter, $\epsilon$, is expressed as a function of $N$ based on work in \cite{FlyerLehto11}. If we let $(\kappa_A)_j$ be the condition number of the interpolation matrix in Equation~\ref{eq:rbffd_weight_system} for the $j^{th}$ stencil, then we seek an $\epsilon$ such that the mean condition number of the local RBF interpolation matrices $\bar{\kappa}_A = \frac{1}{N}\sum_{j=1}^N (\kappa_A)_j$ is kept constant as $N$ grows. For a constant mean condition number, $\epsilon$ varies linearly with $\sqrt{N}$ (see \cite{FlyerLehto11} Figure 4a and b, and the examples in Section~\ref{sec:epsilon_contours}). This is not surprising since the condition number strongly depends on the quantity $\epsilon r$, where $r\thicksim1/\sqrt{N}$ on the sphere. Thus, to obtain a constant condition number, we let $\epsilon (N) = c_1 \sqrt{N} - c_2$, where $c_1$ and $c_2$ are constants based on \cite{FlyerLehto11}.
 
